--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Philip Mocz, computational physicist at Lawrence Livermore National Laboratory">
-    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Einstein Fellow, Lyman Spitzer Jr. Fellow, Princeton University, Lawrence Livermore">
+    <meta name="description" content="Philip Mocz, software engineer at the Flatiron Institute">
+    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Flatiron Institute, Lawrence Livermore National Laboratory, Princeton University, Harvard University">
     <meta name="author" content="Philip Mocz">
     <meta name="title" content="Philip Mocz">
     <meta itemprop="name" content="Philip Mocz">
-    <meta itemprop="description" content="Philip Mocz, computational physicist at Lawrence Livermore National Laboratory">
+    <meta itemprop="description" content="Philip Mocz, software engineer at the Flatiron Institute">
     <meta itemprop="image" content="http://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta property="og:url" content="https://www.pmocz.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Philip Mocz">
     <meta property="og:site_name" content="Philip Mocz">
-    <meta property="og:description" content="Philip Mocz, computational physicist at Lawrence Livermore National Laboratory">
+    <meta property="og:description" content="Philip Mocz, software engineer at the Flatiron Institute">
     <meta property="og:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Philip Mocz">
     <meta name="twitter:site" content="@PMocz">
-    <meta name="twitter:description" content="Philip Mocz, computational physicist at Lawrence Livermore National Laboratory">
+    <meta name="twitter:description" content="Philip Mocz, software engineer at the Flatiron Institute">
     <meta name="twitter:image:alt" content="Philip Mocz">
     <meta name="twitter:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="MobileOptimized" content="width">
@@ -46,17 +46,17 @@
       "image": "https://pmocz.github.io/img/people/philip_mocz.jpg",
       "sameAs": [
         "https://www.facebook.com/pmocz",
-        "https://twitter.com/PMocz",
-        "https://www.instagram.com/pmocz/",
+        "https://x.com/PMocz",
+        "https://www.instagram.com/pmocz",
         "https://www.youtube.com/channel/UC7egi9A5hnYLpNYJoPZdslA",
-        "https://www.linkedin.com/in/philip-mocz/",
-        "https://github.com/pmocz/",
+        "https://www.linkedin.com/in/philip-mocz",
+        "https://github.com/pmocz",
         "https://pmocz.github.io"
       ],
-      "jobTitle": "Astrophysicist",
+      "jobTitle": "Software Engineer",
       "worksFor": {
         "@type": "Organization",
-        "name": "Princeton University"
+        "name": "Flatiron Institute",
       }
     }
     </script>
@@ -270,7 +270,7 @@
 
             <p>
         📝 I maintain a blog on introductory tutorials to <a href="https://philip-mocz.medium.com">scientific computing with Python</a>,
-        accessible at the undergraduate level. You can follow me on <a href="https://philip-mocz.medium.com">Medium</a> and <a href="https://twitter.com/PMocz">Twitter</a>.
+        accessible at the undergraduate level. You can follow me on <a href="https://philip-mocz.medium.com">Medium</a> and <a href="https://x.com/PMocz">Twitter</a>.
             </p>
 
             <p> </p>
@@ -1088,7 +1088,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
               <p class="text-muted">Computational Physicist</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://twitter.com/PMocz">
+                  <a href="https://x.com/PMocz">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
