--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
+                  <a href="https://www.threads.com/@pmocz">
+                    <i class="fa-brands fa-threads"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
                   <a href="https://philip-mocz.medium.com/">
                     <i class="fa-brands fa-medium-m"></i>
                   </a>
@@ -986,6 +991,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   </div>
                 </div>
               </li>
+              <!-- 
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/april1arxiv.png" alt="">
@@ -999,7 +1005,8 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   </div>
                 </div>
               </li>
-              <li>
+              -->
+              <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/vr.jpg" alt="">
                 </div>
@@ -1014,7 +1021,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   </div>
                 </div>
               </li>
-              <li class="timeline-inverted">
+              <li>
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/shock.jpg" alt="">
                 </div>
@@ -1027,7 +1034,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   </div>
                 </div>
               </li>
-              <li>
+              <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/crmhd.png" alt="">
                 </div>
@@ -1040,7 +1047,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   </div>
                 </div>
               </li>
-              <li class="timeline-inverted">
+              <li>
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/rv.jpg" alt="">
                 </div>
@@ -1053,7 +1060,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   </div>
                 </div>
               </li>
-              <li>
+              <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/projects/sph.png" alt="">
                 </div>
@@ -1096,6 +1103,11 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                 <li class="list-inline-item">
                   <a href="https://bsky.app/profile/philipmocz.bsky.social">
                     <i class="fa-brands fa-bluesky"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.threads.com/@pmocz">
+                    <i class="fa-brands fa-threads"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
@@ -1154,7 +1166,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
           </div>
           <div class="col-sm-4 text-center">
       <a href="https://twitter.com/PMocz"> <i>Twitter feed:</i> </a>
-          <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by @PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <div class="col-sm-4 text-center">
       <!-- Instagram Feed -->
