--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
           </div>
           <div class="col-sm-4 text-center">
       <a href="https://twitter.com/PMocz"> <i>Twitter feed:</i> </a>
-          <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by @PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <div class="col-sm-4 text-center">
       <!-- Instagram Feed -->
