--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         "https://www.facebook.com/pmocz",
         "https://x.com/PMocz",
         "https://www.instagram.com/pmocz",
-        "https://www.youtube.com/channel/UC7egi9A5hnYLpNYJoPZdslA",
+        "https://www.youtube.com/@philip-mocz",
         "https://www.linkedin.com/in/philip-mocz",
         "https://github.com/pmocz",
         "https://pmocz.github.io"
@@ -237,62 +237,47 @@
         </div>
         <div class="col-lg-12 text-justify text-muted">
 
-      <!-- I consider myself a leading expert on computational methods for astrophysics and applying them to solve challenging problems in cosmology and turbulence. -->
-
       <p>
-        I am a computational research scientist and software engineer at the <a href = "https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Flatiron Institute, Center for Computational Astrophysics</a> interested in developing software for scalable high-performance multi-physics simulations integrated with modern AI techniques.
-        Prior to joining the foundation, I was a computational physicist at the <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a> where I developed high-performance multi-physics simulation code on heterogenous architectures, in particular
-        high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations,
-        as part of the <a href = "https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
-        I also have in interest in simulating cosmological dark matter models, such as <a
-        href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301">
-        fuzzy dark matter</a>.
+        I am a computational research scientist and software engineer at 
+        <a href = "https://www.simonsfoundation.org/flatiron/">Flatiron Institute</a>'s
+        <a href = "https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Center for Computational Astrophysics</a>, 
+        part of the <a href = "https://www.simonsfoundation.org/">Simons Foundation</a>.
+        My work focuses on developing scalable, high-performance multi-physics simulation software, with a growing emphasis on integrating modern AI techniques and automatic differentiability.
+        Before joining the Flatiron Institute, I was a Computational Physicist at <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>, where I specialized in designing high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations on heterogeneous computing architectures, as part of the <a href = "https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
+        In addition to my work in computational astrophysics and multi-physics methods, I have a strong research interest in cosmological simulations, particularly modeling alternative dark matter candidates such as <a href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301"> fuzzy dark matter</a>.
       </p>
 
       <p>
-        I completed my PhD in Astrophysics 2017 at
-        <a href="https://www.harvard.edu/">Harvard University</a>
-        under the advisorship of <a href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars
-        Hernquist</a>. During my PhD, I designed a finite volume moving mesh MHD code,
-        and applied it to study structure formation and magnetic field growth in
-        the interstellar medium and in cosmological settings.
-        My physics modules were implemented into the
-        <a href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a>
-        code.
-        I received an AB in Mathematics and Astrophysics in 2012 from Harvard.
+        I earned my Ph.D. in Astrophysics from <a href="https://www.harvard.edu/">Harvard University</a> in 2017, where I was advised by <a href="http://astronomy.fas.harvard.edu/people/lars-hernquist">Lars Hernquist</a>. During my doctoral research, I developed a finite-volume moving mesh magnetohydrodynamics (MHD) algorithm, which I applied to study structure formation and magnetic field amplification in both the interstellar medium and cosmological environments. I integrated my solvers into the <a href="https://wwwmpa.mpa-garching.mpg.de/~volker/arepo/">Arepo</a> simulation code. Prior to my Ph.D., I received an A.B. in Mathematics and Astrophysics from Harvard in 2012.
       </p>
 
       <p>
-        My research interests include
-        multi-physics simulations, cosmology, galaxy
-        evolution, black hole physics, turbulence, numerical
-        methods, computer visualization, and machine learning/AI.
-            </p>
+        My research interests span multi-physics simulations, cosmology, galaxy formation and evolution, black hole physics, turbulence, numerical methods, scientific visualization, and the integration of machine learning and AI into computational astrophysics.
+      </p>
 
-            <p>
-        I grew up in <a class="portfolio-link" data-toggle="modal" href="#portfolioModalHawaii"> Hawaii</a>
-        and I enjoy spending time in the <a class="portfolio-link" data-toggle="modal" href="#portfolioModalOutdoors"> outdoors</a>.
-            </p>
+      <p>
+        Originally from <a class="portfolio-link" data-toggle="modal" href="#portfolioModalHawaii"> Hawaii</a>, I enjoy spending time <a class="portfolio-link" data-toggle="modal" href="#portfolioModalOutdoors"> outdoors</a> when away from the computer.
+      </p>
 
-            <p>
-        📝 I maintain a blog on introductory tutorials to <a href="https://philip-mocz.medium.com">scientific computing with Python</a>,
-        accessible at the undergraduate level. You can follow me on <a href="https://philip-mocz.medium.com">Medium</a> and <a href="https://x.com/PMocz">Twitter</a>.
-            </p>
+      <p>
+        📝 I maintain a blog featuring introductory tutorials on <a href="https://philip-mocz.medium.com">scientific computing with Python</a>,
+        accessible at the undergraduate level. You can follow my posts on <a href="https://philip-mocz.medium.com">Medium</a> and <a href="https://x.com/PMocz">Twitter</a>.
+      </p>
 
-            <p> </p>
+      <p> </p>
 
-            <p>
-            <center>
-            <a href="https://www.simonsfoundation.org/flatiron/"><img class="img-fluid" style="height:60px;" src="img/sf.png" alt=""></a>
-            <a href="https://www.llnl.gov/"><img class="img-fluid" style="height:60px;" src="img/llnl.jpg" alt=""></a>
-            <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="height:60px;" src="img/princeton.png" alt=""></a>
-            <a href="https://astronomy.fas.harvard.edu/"><img class="img-fluid" style="height:60px;" src="img/harvard.png" alt=""></a>
-            <a href="https://www.energy.gov/"><img class="img-fluid" style="height:60px;" src="img/doe.png" alt=""></a>
-            <a href="https://www.nasa.gov/"><img class="img-fluid" style="height:60px;" src="img/nasa.png" alt=""></a>
-            <a href="https://www.nsf.gov/"><img class="img-fluid" style="height:60px;" src="img/nsf.png" alt=""></a>
-            <a href="https://www.xsede.org/"><img class="img-fluid" style="height:60px;" src="img/xsede2.png" alt=""></a>
-            </center>
-            </p>
+      <p>
+        <center>
+        <a href="https://www.simonsfoundation.org/flatiron/"><img class="img-fluid" style="height:60px;" src="img/sf-logo.png" alt=""></a>
+        <a href="https://www.llnl.gov/"><img class="img-fluid" style="height:60px;" src="img/llnl.jpg" alt=""></a>
+        <a href="https://web.astro.princeton.edu/"><img class="img-fluid" style="height:60px;" src="img/princeton.png" alt=""></a>
+        <a href="https://astronomy.fas.harvard.edu/"><img class="img-fluid" style="height:60px;" src="img/harvard.png" alt=""></a>
+        <a href="https://www.energy.gov/"><img class="img-fluid" style="height:60px;" src="img/doe.png" alt=""></a>
+        <a href="https://www.nasa.gov/"><img class="img-fluid" style="height:60px;" src="img/nasa.png" alt=""></a>
+        <a href="https://www.nsf.gov/"><img class="img-fluid" style="height:60px;" src="img/nsf.png" alt=""></a>
+        <a href="https://www.xsede.org/"><img class="img-fluid" style="height:60px;" src="img/xsede2.png" alt=""></a>
+        </center>
+      </p>
 
         </div>
       </div>
@@ -740,7 +725,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Blog</h2>
-            <h3 class="section-subheading text-muted">~100 line Python tutorials to intro to scientific computing, hosted on my Medium blog. <a href="https://philip-mocz.medium.com">Follow me</a> for updates! My latest posts are shown below</h3>
+            <h3 class="section-subheading text-muted">~100 line Python tutorials on intro to scientific computing, hosted on my Medium blog. <a href="https://philip-mocz.medium.com">Follow me</a> for updates! My latest posts are shown below</h3>
             <div class="col-lg-12 text-left">
       <div id="myblogfeed">
             <script src="//rss.bloople.net/?url=https%3A%2F%2Fphilip-mocz.medium.com%2Ffeed&limit=4&showtitle=false&type=js"></script>
@@ -1165,7 +1150,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
           </div>
           <div class="col-sm-4 text-center">
       <a href="https://twitter.com/PMocz"> <i>Twitter feed:</i> </a>
-      <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" data-height="640" href="https://twitter.com/PMocz?ref_src=twsrc%5Etfw">Tweets by @PMocz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <div class="col-sm-4 text-center">
       <!-- Instagram Feed -->
