--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       "jobTitle": "Software Engineer",
       "worksFor": {
         "@type": "Organization",
-        "name": "Flatiron Institute",
+        "name": "Flatiron Institute"
       }
     }
     </script>
@@ -1264,7 +1264,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
          around the Seyfert 2 AGN IRAS 18325-5926 by analyzing
          <i>Chandra</i> High Energy transmission grating
          spectra. We detected two blue-shifted ionized winds.
-         We also studied the the broad Fe K emission profile to
+         We also studied the broad Fe K emission profile to
          understand the properties of the accretion disk.
                   </p>
                   <ul class="list-inline">
@@ -1351,7 +1351,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   <p class="item-intro text-muted">cosmological growth and feedback</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/feedback.png" alt="">
                   <p>
-         I continued my work with I worked with Andy Fabian and
+         I continued my work with Andy Fabian and
          Katherine Blundell on our model of radio mode feedback
          to explore the amount of kinetic feedback from SMBHs
          in the Universe across cosmological time through
@@ -1540,7 +1540,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   <p class="item-intro text-muted">for the non-linear Schr&ouml;dinger equations</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/shodyn.png" alt="">
                   <p>
-         I have depeveloped, with Sauro Succi, a
+         I have developed, with Sauro Succi, a
          Smoothed-Particle Hydrodynamics (SPH) for solving the
          non-linear Schrodinger equations in Madelung (fluid)
          form. These equations describe Bose-Einstein
@@ -1620,7 +1620,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   <p class="item-intro text-muted">simulations</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/tde.png" alt="">
                   <p>
-                 Work (in prep.) win James Guillochon on simulating tidal
+                 Work (in prep.) with James Guillochon on simulating tidal
                 disruption events using a moving mesh, which allows one
                 to simulate the entire system in a single, self-consistent
                 frame and study the late-term behaviour of the disruption.
@@ -1744,7 +1744,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                 is isotropic, with chaotic field lines, but not
                 self-similar, with magnetic field strength scaling as
                 density^(2/3). In the strongly magnetized case, the
-                magnetic fields control collapse, leanding to a classic
+                magnetic fields control collapse, leading to a classic
                 hourglass shape magnetic field morphology, and magnetic
                 field strength scaling as density^(1/2), with plasma
                 beta unity.
