--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="star-layer" id="stars3"></div>
         <div class="intro-text">
           <div class="intro-heading">Philip Mocz</div>
-          <div class="intro-lead-in">Computational Physics & AI |  <a href = "https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Flatiron Institute</a></div>
+          <div class="intro-lead-in">Computational Physics & AI |  <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Flatiron Institute</a></div>
           <div class="team-member">
             <img class="rounded-circle img-fluid" src="img/people/philip_mocz.jpg" alt="">
           </div>
@@ -239,11 +239,11 @@
 
       <p>
         I am a computational research scientist and software engineer at 
-        <a href = "https://www.simonsfoundation.org/flatiron/">Flatiron Institute</a>'s
-        <a href = "https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Center for Computational Astrophysics</a>, 
-        part of the <a href = "https://www.simonsfoundation.org/">Simons Foundation</a>.
+        <a href="https://www.simonsfoundation.org/flatiron/">Flatiron Institute</a>'s
+        <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Center for Computational Astrophysics</a>, 
+        part of the <a href="https://www.simonsfoundation.org/">Simons Foundation</a>.
         My work focuses on developing scalable, high-performance multiphysics simulation software, with a growing emphasis on integrating modern AI techniques and automatic differentiability.
-        Before joining the Flatiron Institute, I was a Computational Physicist at <a href = "https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>, where I specialized in designing high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations on heterogeneous computing architectures, as part of the <a href = "https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
+        Before joining the Flatiron Institute, I was a Computational Physicist at <a href="https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>, where I specialized in designing high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations on heterogeneous computing architectures, as part of the <a href="https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
         In addition to my work in computational astrophysics and multiphysics methods, I have a strong research interest in cosmological simulations, particularly modeling alternative dark matter candidates such as <a href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301">fuzzy dark matter</a>.
       </p>
 
@@ -747,7 +747,7 @@
       <!-- Collaborator network onload="draw()" -->
       <h3 class="section-subheading text-muted">
       <button onclick="document.getElementById('mynetwork').style.width = '90%'; document.getElementById('mynetwork').style.height = '720px'; draw()">Visualize Collaborator Network</button>
-       <font color="red">(beta... Click button. It may take a few seconds to render. Interactive!)</font>
+       <span style="color: red;">(beta... Click button. It may take a few seconds to render. Interactive!)</span>
       <center>
       <div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="300" height="300" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas></div></div>
       </center>
@@ -1657,7 +1657,7 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
                   <p class="item-intro text-muted">for Vlasov-Poisson (6D)</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/IL.png" alt="">
                   <p>
-                I developed  a new, very simple and fast
+                I developed a new, very simple and fast
                 numerical method for solving the 6D Vlasov-Poisson
                 equations for collisionless self-gravitating systems
                 such as cold dark matter. The method can resolve
