--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Philip Mocz, computational physics & AI | Flatiron Institute">
+    <meta name="description" content="Philip Mocz, computational physics & AI">
     <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Flatiron Institute, Lawrence Livermore National Laboratory, Princeton University, Harvard University">
     <meta name="author" content="Philip Mocz">
     <meta name="title" content="Philip Mocz">
     <meta itemprop="name" content="Philip Mocz">
-    <meta itemprop="description" content="Philip Mocz, computational physics & AI | Flatiron Institute">
+    <meta itemprop="description" content="Philip Mocz, computational physics & AI">
     <meta itemprop="image" content="http://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta property="og:url" content="https://www.pmocz.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Philip Mocz">
     <meta property="og:site_name" content="Philip Mocz">
-    <meta property="og:description" content="Philip Mocz, computational physics & AI | Flatiron Institute">
+    <meta property="og:description" content="Philip Mocz, computational physics & AI">
     <meta property="og:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Philip Mocz">
     <meta name="twitter:site" content="@PMocz">
-    <meta name="twitter:description" content="Philip Mocz, computational physics & AI | Flatiron Institute">
+    <meta name="twitter:description" content="Philip Mocz, computational physics & AI">
     <meta name="twitter:image:alt" content="Philip Mocz">
     <meta name="twitter:image" content="https://pmocz.github.io/img/people/philip_mocz.jpg">
     <meta name="MobileOptimized" content="width">
@@ -159,7 +159,7 @@
           <div class="star-layer" id="stars3"></div>
         <div class="intro-text">
           <div class="intro-heading">Philip Mocz</div>
-          <div class="intro-lead-in">Computational Physics & AI |  <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Flatiron Institute</a></div>
+          <div class="intro-lead-in">Software Engineer, Computational Physics, AI</div>
           <div class="team-member">
             <img class="rounded-circle img-fluid" src="img/people/philip_mocz.jpg" alt="">
           </div>
@@ -1137,14 +1137,16 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
               </ul>
             </div>
       <p> </p>
-            <p> <a href="mailto:pmocz@flatironinstitute.org"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">pmocz@flatironinstitute.org</a> </p>
+            <p> <a href="mailto:philip.mocz@gmail.com"><img src="img/mail-icon.png" style="width:1em;margin-right:.5em;" alt="">philip.mocz@gmail.com</a> </p>
             <a href="https://orcid.org/0000-0001-6631-2566" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6631-2566</a>
             <p> </p>
+            <!-- 
             <ul class="list-inline">
               <li>Center for Computational Astrophysics, Flatiron Institute,</li>
               <li>162 Fifth Avenue</li>
               <li>New York, NY 10010, USA</li>
             </ul>
+            -->
             <p class="text-muted">Philip Mocz pronounced:&nbsp;
             <audio controls=""><source src="philip_mocz_pronunciation.mp3" type="audio/mpeg"> Your browser does not support the audio element.</audio></p>
           </div>
