--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Philip Mocz, computational physics & AI">
-    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Flatiron Institute, Lawrence Livermore National Laboratory, Princeton University, Harvard University">
+    <meta name="keywords" content="Philip Mocz, Astrophysics, Cosmology, Computational Physics, Two Sigma, Flatiron Institute, Lawrence Livermore National Laboratory, Princeton University, Harvard University">
     <meta name="author" content="Philip Mocz">
     <meta name="title" content="Philip Mocz">
     <meta itemprop="name" content="Philip Mocz">
@@ -53,10 +53,10 @@
         "https://github.com/pmocz",
         "https://pmocz.github.io"
       ],
-      "jobTitle": "Software Engineer",
+      "jobTitle": "Quantitative Software Engineer",
       "worksFor": {
         "@type": "Organization",
-        "name": "Flatiron Institute"
+        "name": "Two Sigma"
       }
     }
     </script>
@@ -238,13 +238,17 @@
         <div class="col-lg-12 text-justify text-muted">
 
       <p>
-        I am a computational research scientist and software engineer at 
+        I am now a Quantitative Software Engineer at <a href="https://www.twosigma.com/">Two Sigma</a>. This webpage is a record of my research activities in computational physics and astrophysics.
+      </p>
+
+      <p>
+        I was a computational research scientist and software engineer at 
         <a href="https://www.simonsfoundation.org/flatiron/">Flatiron Institute</a>'s
         <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/">Center for Computational Astrophysics</a>, 
         part of the <a href="https://www.simonsfoundation.org/">Simons Foundation</a>.
-        My work focuses on developing scalable, high-performance multiphysics simulation software, with a growing emphasis on integrating modern AI techniques and automatic differentiability.
-        Before joining the Flatiron Institute, I was a Computational Physicist at <a href="https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>, where I specialized in designing high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations on heterogeneous computing architectures, as part of the <a href="https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
-        In addition to my work in computational astrophysics and multiphysics methods, I have a strong research interest in cosmological simulations, particularly modeling alternative dark matter candidates such as <a href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301">fuzzy dark matter</a>.
+        My work focused on developing scalable, high-performance multiphysics simulation software, with a growing emphasis on integrating modern AI techniques and automatic differentiability (e.g. <a href="https://github.com/JaxionProject/Jaxion">Jaxion</a>, <a href="https://github.com/AdirondaxProject/Adirondax">Adirondax</a>), and supporting the <a href="https://mesastar.org">MESA</a> code.
+        Before joining the Flatiron Institute, I was a Computational Physicist at <a href="https://www.llnl.gov/">Lawrence Livermore National Laboratory</a>, where I specialized in developing high-order Arbitrary Lagrangian-Eulerian (ALE) finite element methods for magnetohydrodynamics (MHD) simulations on heterogeneous computing architectures, as part of the <a href="https://computing.llnl.gov/projects/mapp">Multiphysics on Advanced Platforms Project (MAPP)</a>.
+        In addition to my work in computational astrophysics and multiphysics methods, I have a research interest in cosmological simulations, particularly modeling alternative dark matter candidates such as <a href="https://physics.aps.org/synopsis-for/10.1103/PhysRevLett.123.141301">fuzzy dark matter</a>, something I expanded upon greatly during my time as  an Einstein Fellow at <a href="https://web.astro.princeton.edu//"></a>Princeton University</a>.
       </p>
 
       <p>
@@ -331,7 +335,7 @@
         <p>
         <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.494.2027M/abstract">Galaxy Formation with BECDM - II. Cosmic Filaments and First Galaxies</a>
                 <br/>
-                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Becerra, F.; Shen, X.; Robles, V.H.; Amin, M.A.; Zavala, J.; Boylan-Kolchin, M.; Bose, S.; Marinacci, F.; Chavanis, P.H.; Lancaster, K.; Hernquist, L.; 2021 MNRAS, 494, 2021
+                <b>Mocz, P.</b>; Fialkov, A.; Vogelsberger, M.; Becerra, F.; Shen, X.; Robles, V.H.; Amin, M.A.; Zavala, J.; Boylan-Kolchin, M.; Bose, S.; Marinacci, F.; Chavanis, P.H.; Lancaster, K.; Hernquist, L.; 2021 MNRAS, 494, 2027
                 </p>
         <p>
         <a href="https://ui.adsabs.harvard.edu/abs/2019PhRvL.123n1301M/abstract">First star-forming structures in fuzzy cosmic filaments</a>
@@ -350,7 +354,7 @@
                 <b>Mocz, P.</b>; Burkhart, B.; 2019 ApJL, 884, 2
                 </p>
                 <p>
-        <a href="https://https://ui.adsabs.harvard.edu/abs/2019PhRvD.100f3507A/abstract">Formation, Gravitational Clustering and Interactions of Non-relativistic Solitons in an Expanding Universe</a>
+        <a href="https://ui.adsabs.harvard.edu/abs/2019PhRvD.100f3507A/abstract">Formation, Gravitational Clustering and Interactions of Non-relativistic Solitons in an Expanding Universe</a>
                 <br/>
                 Amin, M.; <b>Mocz, P.</b>; 2019 Phys. Rev. D, 100, 6
                 </p>
@@ -411,6 +415,23 @@
           </div>
         </div>
         <div class="row">
+
+      <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal21">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/jaxion-thumbnail.png" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Jaxion: Differentiable Astrophysics Simulations</h4>
+              <p class="text-muted">
+        Differentiable GPU simulations in JAX for inverse-problems and inference.
+        </p>
+            </div>
+          </div>
 
       <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal20">
@@ -2023,6 +2044,39 @@ Jesus Zavala <br>   <a href="https://notendur.hi.is/~jzavala/">Iceland</a> </div
           </p>
                   <ul class="list-inline">
                     <li><a href="https://computing.llnl.gov/projects/mapp">--LLNL project link--</a></li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 10 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal21" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2>Jaxion: Differentiable Astrophysics Simulations</h2>
+                  <p class="item-intro text-muted">Differentiable GPU simulations in JAX for inverse-problems and inference</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/jaxion.png" alt="">
+                  <p>  I work on developing next-generation differentiable astrophysics simulation capabilities in JAX to enable inverse-problems and inference in astrophysics.
+          </p>
+                  <ul class="list-inline">
+                    <li><a href="https://github.com/JaxionProject/Jaxion">--project link--</a></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
